--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://THORISO:<YourPassword>@cluster0.src4n6y.mongodb.net/Educare_Learners?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://THORISO:THORISO2@cluster0.src4n6y.mongodb.net/Educare_Learners?retryWrites=true&w=majority
 JWT_SECRET=YourSecretKeyHere
