correct connection string

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-PORT=5000
-MONGO_URI=mongodb+srv://THORISO:THORISO2@cluster0.src4n6y.mongodb.net/Educare_Learners?retryWrites=true&w=majority
+# Server port
+PORT=10000
+
+# MongoDB connection string
+MONGO_URI=mongodb+srv://THORISO:THORISO2@cluster0.src4n6y.mongodb.net/Educare_Learners?retryWrites=true&w=majority&appName=Cluster0
+
+# JWT secret
 JWT_SECRET=YourSecretKeyHere
