--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=10000
 
 # MongoDB connection string
-MONGO_URI=mongodb+srv://THORISO:THORISO2@cluster0.src4n6y.mongodb.net/Educare_Learners?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://THORISO:THORISO2@cluster0.src4n6y.mongodb.net/Educare_Learners?retryWrites=true&w=majority
 
 # JWT secret
 JWT_SECRET=YourSecretKeyHere
